<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_cat_folder">

        <Preference
            app:key="pref_pick_folder"
            app:title="@string/pref_pick_folder_title"
            app:summary="@string/pref_pick_folder_summary"
            app:persistent="false" />

        <Preference
            app:key="folder_uri"
            app:title="@string/pref_current_folder_title"
            app:persistent="false"
            app:selectable="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cat_playback">

        <SeekBarPreference
            app:key="duration_seconds"
            app:title="@string/pref_duration_title"
            app:min="1"
            android:max="600"
            app:defaultValue="10"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true" />

        <ListPreference
            app:key="transition_type"
            app:title="@string/pref_transition_title"
            app:entries="@array/transition_entries"
            app:entryValues="@array/transition_values"
            app:defaultValue="fade"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:key="transition_duration_ms"
            app:title="@string/pref_transition_duration_title"
            app:min="100"
            android:max="5000"
            app:defaultValue="800"
            app:seekBarIncrement="50"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            app:key="shuffle"
            app:title="@string/pref_shuffle_title"
            app:summary="@string/pref_shuffle_summary"
            app:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
